--- a/CadastroAluno/appsettings.json
+++ b/CadastroAluno/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CadastroAlunoContext": "Server=(localdb)\\mssqllocaldb;Database=CadastroAlunoContext-317d578e-6d51-4711-acc8-8fc51cdb0f6d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
